<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/fondo"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:padding="30dip"
    android:orientation="horizontal" >
    >
   	<LinearLayout
   		android:orientation="vertical"
   		android:layout_height="wrap_content"
   		android:layout_width="fill_parent"
   		android:layout_gravity="center" >
		<TextView
			android:layout_gravity="center"
			android:layout_marginBottom="25dip"
			android:textSize="24.5sp"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/tituloPrincipal"
			android:gravity = "center" />
		<Button
			android:id="@+id/btnNuevaPartida"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/nuevaPartida" />
		<Button
			android:id="@+id/btnContinuar"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/continuar" />
		<Button
			android:id="@+id/btnInfo"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/info" />
		<Button
			android:id="@+id/btnSalir"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/salir" />	
	</LinearLayout>
</LinearLayout>
